fix: hide page scrollbar

--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ body {
   color: #262626;
   line-height: 1.5;
   min-height: 100vh;
+  scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 img {
